--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,5 +1,5 @@
 ---
 i_pi_code_folder: "${HOME}"
 i_pi_root_dir: "{{ i_pi_code_folder}}/i-pi"
-i_pi_version: 18b254a9100d47910046ab190c53b89bcecae310
+i_pi_version: v2.0.0
 root_user: "root"
